<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_almacen"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_almacen" />

    <item
        android:id="@+id/navigation_tienda"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_tienda" />

    <item
        android:id="@+id/navigation_pedidos"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_pedidos" />

    <item
        android:id="@+id/navigation_colaboradores"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_colaboradores" />
    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_perfil" />


</menu>
